Refactoring and correcting calculation for Stratified sampling